src/objects/Order_Event_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EBS_ORDER_TYPE__c</fullName>
        <label>EBS ORDER TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUSION_ORDER_TYPE__c</fullName>
        <label>FUSION ORDER TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ORDER_TYPE__c</fullName>
        <label>SFDC ORDER TYPE</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_RECORD_TYPE__c</fullName>
        <label>SFDC RECORD TYPE</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Order Event Setting</label>
    <pluralLabel>Order Event Settings</pluralLabel>
</CustomObject>